--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- Include the stylesheet -->
-    <link rel="stylesheet" href="pwa/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <!-- Meta tags for iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,7 +26,7 @@
     </div>
 
     <!-- Include the main JavaScript file -->
-    <script src="pwa/app.js"></script>
+    <script src="app.js"></script>
 
     <!-- Register the service worker -->
     <script>
