--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <!-- Meta tags for iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="apple-touch-icon" href="icons/icon-192.png">
+    <link rel="apple-touch-icon" href="icon-192.png">
+
+    
 </head>
 <body>
     <h1>Accelerometer Data</h1>
